--- a/config.toml
+++ b/config.toml
@@ -6,9 +6,9 @@ baseURL = "https://martensd.github.io"
 theme = 'hugo-bearblog'
 
 # Basic metadata configuration for your blog.
-title = "martensd"
-author = "martensd"
-copyright = "Copyright © 2022, martensd."
+title = "Daniel Martens, Ph.D."
+author = "Daniel Martens"
+copyright = "Copyright © 2022, Daniel Martens."
 languageCode = "en-US"
 
 # Generate a nice robots.txt for SEO
@@ -23,7 +23,7 @@ ignoreErrors = ["error-disable-taxonomy"]
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
-  description = "martensd"
+  description = "Daniel Martens, Ph.D."
 
   # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
   # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
@@ -38,7 +38,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "martensd"
+  title = "Daniel Martens"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
